Added info in README

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,9 +2,9 @@
 
 @import play.api.mvc._
 
-@main("Polls 'R' Us") {
+@main("Template Project") {
 
-	<h3>Survey Says...This is your Poll application.</h3>
+	<h3>hello world</h3>
 	<br/>
     @message
     <br/>
